# pydantic-gitlab-cli

./: LICENSE  README.md  pyproject.toml
src/pydantic_gitlab_cli/: __init__.py  main.py
src/pydantic_gitlab_cli/commands/: __init__.py  check.py  init_config.py  issues.py  list_rules.py  merge_requests.py  projects.py
src/pydantic_gitlab_cli/linter/: __init__.py  base.py  config.py  engine.py  formatters.py
src/pydantic_gitlab_cli/linter/rules/: __init__.py  cache_optimization.py  dependencies.py  docker.py  includes.py  naming.py  optimization.py  quality.py  review.py  security.py  structure.py  syntax.py
tests/: __init__.py  test_check.py  test_linter_rules.py  test_main.py  test_parallel_matrix_limit.py
tests/fixtures/: cache-optimization-test.gitlab-ci.yml  invalid-includes.gitlab-ci.yml  invalid-latest.gitlab-ci.yml  invalid-naming.gitlab-ci.yml  invalid-optimization.gitlab-ci.yml  invalid-quality.gitlab-ci.yml  invalid-security-simple.gitlab-ci.yml  invalid-security.gitlab-ci.yml  invalid-stages.gitlab-ci.yml  parallel-matrix-advanced.gitlab-ci.yml  parallel-matrix-exceed.gitlab-ci.yml  parallel-matrix-limits.gitlab-ci.yml  perfect.gitlab-ci.yml  valid-simple.gitlab-ci.yml  valid.gitlab-ci.yml
